--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,14 @@ button {
 
 .page-footer-container {
   display: flex;
-  gap: 120px;
+}
+
+.logo-text-footer-wrapper {
+  margin-right: 120px;
+}
+
+.footer-social-networks-wrapper {
+  margin-right: 80px;
 }
 
 .logo-text-footer {
@@ -475,6 +482,80 @@ button {
   background-color: var(--success-messages-color);
 }
 
+/* Footer form */
+.footer-form-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.footer-form-input {
+  border: 1px solid var(--primary-bkg-color);
+  background-color: inherit;
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  margin-right: 24px;
+  color: var(--hero-text-color);
+
+  box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  transition: border-color 250ms var(--animation-timing-function);
+}
+
+.footer-form-input::placeholder {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: var(--hero-text-color);
+}
+
+.footer-form-input:focus {
+  outline: none;
+  border-color: var(--primary-brand-color);
+}
+
+.footer-form-submit {
+  align-self: center;
+  font-family: inherit;
+
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  min-width: 165px;
+  min-height: 40px;
+  padding-top: 8px;
+  padding-right: 24px;
+  padding-bottom: 8px;
+  padding-left: 24px;
+  justify-content: center;
+  color: var(--hero-text-color);
+  background-color: var(--primary-brand-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  border-radius: 4px;
+
+  transition: background-color 250ms var(--animation-timing-function);
+}
+
+.footer-form-submit:hover,
+.footer-form-submit:focus,
+.footer-form-submit:active {
+  background-color: var(--accent-color);
+}
+
+.footer-submit-icon {
+  fill: var(--primary-bkg-color);
+  margin-left: 16px;
+}
 /* ==========/FOOTER========== */
 
 /* ==========PORTFOLIO PAGE========== */
@@ -612,7 +693,7 @@ button {
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 576px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -658,4 +739,166 @@ button {
 .modal-close-btn:focus .modal-close-btn-icon {
   fill: var(--hero-text-color);
 }
+
 /* ==========/MODAL WINDOW========== */
+
+/* ==========MODAL FORM========== */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: var(--primary-text-color);
+}
+
+.modal-form-field {
+  margin-bottom: 8px;
+}
+
+.modal-form-field-input-descr {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+  color: var(--subtitle-text-color);
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  color: var(--primary-text-color);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: #fcfcfc;
+
+  transition: border-color 250ms var(--animation-timing-function);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--primary-brand-color);
+}
+
+.modal-form-input-icon {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: var(--primary-text-color);
+
+  transition: fill 250ms var(--animation-timing-function);
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--primary-brand-color);
+}
+
+.modal-form-comment {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+  resize: none;
+  background-color: #fcfcfc;
+  color: var(--primary-text-color);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+
+  transition: border-color 250ms var(--animation-timing-function);
+}
+
+.modal-form-comment:focus {
+  outline: none;
+  border-color: var(--primary-brand-color);
+}
+
+.modal-form-comment::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-form-check-descr::before {
+  content: "";
+  display: block;
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+}
+
+.modal-form-check:checked + .modal-form-check-descr::before {
+  background-color: var(--accent-color);
+  border-color: transparent;
+  background-image: url(../images/icon-check.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.modal-form-check:focus + .modal-form-check-descr::before {
+  outline: 1px solid var(--primary-brand-color);
+}
+
+.modal-form-check-descr::before {
+  margin-right: 8px;
+}
+
+.modal-form-check-descr {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  margin-bottom: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtitle-text-color);
+}
+
+.user-policy-link {
+  color: var(--primary-brand-color);
+}
+
+.modal-form-submit {
+  align-self: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  min-width: 169px;
+  min-height: 56px;
+  padding-top: 16px;
+  padding-right: 32px;
+  padding-bottom: 16px;
+  padding-left: 32px;
+  justify-content: center;
+  color: var(--hero-text-color);
+  background-color: var(--primary-brand-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  border-radius: 4px;
+
+  transition: background-color 250ms var(--animation-timing-function);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus,
+.modal-form-submit:active {
+  background-color: var(--accent-color);
+}
+/* ==========/MODAL FORM========== */
