--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   font-size: 16px;
   color: var(--primary-text-color);
   background-color: var(--primary-bkg-color);
+  height: 100vh;
 }
 
 h1,
@@ -220,7 +221,7 @@ button {
 /* ==========MAIN PAGE========== */
 /* ==========Hero========== */
 .hero-section {
-  width: 1440px;
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   margin-right: auto;
